--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: url("images/bg.png");
+  background: url("image/bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
